--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,31 @@
-.App {
-  text-align: center;
+*{
+  font-family: -apple-system, BlinkMacSystemFont,Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app{
+  color:#333;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  place-items: center;
+  background-color: rgb(207, 253, 253);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+.app__container{
+  width:30vw;
+  height:70vh;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 12px;
+  background-color: rgba(218, 218, 218, 0.521);
+  padding: 2.5% 0;
 }
 
-.App-header {
-  min-height: 100vh;
+.app__toDoContainer{
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+  width:100%;
 }
